[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-guardrail"
version = "0.1.0"
description = "Real‑time LLM guardrail that corrects policy violations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Axentx Engineer"}
]

[project.optional-dependencies]
test = ["pytest"]
